--- a/Juego/nbproject/project.properties
+++ b/Juego/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Juego
 excludes=
+file.reference.LibreriaJuego.jar=..\\LibreriaJuego\\dist\\LibreriaJuego.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.LibreriaJuego.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
